--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,16 +13,7 @@
 		"titleBar.activeBackground": "#d13ed4",
 		"titleBar.activeForeground": "#e7e7e7",
 		"titleBar.inactiveBackground": "#d13ed499",
-		"titleBar.inactiveForeground": "#e7e7e799",
-		"editorGroup.border": "#db68dd",
-		"panel.border": "#db68dd",
-		"sideBar.border": "#db68dd",
-		"statusBar.border": "#d13ed4",
-		"statusBar.debuggingBackground": "#41d43e",
-		"statusBar.debuggingBorder": "#41d43e",
-		"statusBar.debuggingForeground": "#15202b",
-		"tab.activeBorder": "#db68dd",
-		"titleBar.border": "#d13ed4"
+		"titleBar.inactiveForeground": "#e7e7e799"
 	},
 	"peacock.color": "#d13ed4"
 }
