--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.10.6",
     "flat": "^5.0.2",
     "formik": "^2.2.9",
+    "js-file-download": "^0.4.12",
     "jwt-decode": "^3.1.2",
     "material-ui-dropzone": "^3.5.0",
     "mui-datatables": "^3.7.7",
@@ -38,7 +39,6 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "sweetalert2": "^11.0.18",
-    "sweetalert2-react-content": "^4.1.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
